# garland-combinator

./: .gitignore  LICENSE  README.md  dune-project  garland.opam  garland_jsoo.opam
gallery/: exploding_cyan.ml  garlande.ml
graphics/: dune  garland_graphics.ml
lib/: anim.ml  color.ml  dune  garland.ml  garland.mli  tween.ml
playground/: dune  garland_jsoo.ml  index.html  toplevel.ml
tests/: dune  test.ml
