(library
  (name garland_jsoo)
  (public_name garland_jsoo)
  (modules garland_jsoo)
  (libraries js_of_ocaml-lwt garland)
  (modes byte)
  (js_of_ocaml)
  (preprocess (pps js_of_ocaml-ppx)))

(executable
  (name toplevel)
  (libraries
    js_of_ocaml-compiler
    js_of_ocaml-toplevel
    js_of_ocaml-lwt
    garland_jsoo)
  ; (flags (:standard -rectypes -linkall))
  (flags (:standard -linkall))
  (modes byte)
  (js_of_ocaml)
  (modules toplevel)
  (preprocess (pps js_of_ocaml-ppx)))

(rule
 (targets export.txt)
 (action (run
    jsoo_listunits -o %{targets}
      stdlib
      garland_jsoo)))

(rule
 (targets toplevel.js)
 (action
    (run %{bin:js_of_ocaml}
         -I .
         --export %{dep:export.txt}
         --toplevel
         +toplevel.js
         +dynlink.js
         %{dep:toplevel.bc}
         -o %{targets}
    )))

(alias
  (name default)
  (deps toplevel.js index.html))
